--- a/src/content/peerconnection/munge-sdp/index.html
+++ b/src/content/peerconnection/munge-sdp/index.html
@@ -60,7 +60,7 @@
     <div id="preview">
       <div id="local">
         <h2>Local</h2>
-        <video autoplay muted></video>
+        <video autoplay muted playsinline ></video>
         <h2>Offer SDP</h2>
         <textarea></textarea>
         <br>
@@ -68,7 +68,7 @@
       </div>
       <div id="remote">
         <h2>Remote</h2>
-        <video autoplay></video>
+        <video autoplay playsinline ></video>
         <h2>Answer SDP</h2>
         <textarea></textarea>
       </div>
